home page and teams home page complete

--- a/Pakistan-home.html
+++ b/Pakistan-home.html
@@ -128,7 +128,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="livescores-home.html">Live Scores</a>
@@ -165,7 +165,7 @@
 
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search for players/teams" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-dark btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
       <div class="btn-group" role="group" aria-label="Basic example">
@@ -176,7 +176,50 @@
       </div>
     </nav>
 
-    <h1> Player Insights Page</h1>
+
+	<div class="row">
+		<div class="card-deck">
+		  <div class="col-sm-8">
+  			<div class="card">
+<!--          <img class="card-img-top" src="images/Pakistan.jpg" width="25%" height="25%" alt="Card image cap" height="128" width="128">
+-->  		<div class="card-body">
+  				<h1 class="card-title">Pakistan Team and Players</h1><br><br>
+            <ol class="list-group list-group-flush" type="1">
+            <a class="card-title" href="#">Sarfraz Ahmad</a>
+            <a class="card-title" href="#">Imam-ul-Haq</a>
+            <a class="card-title" href="#">Fahim Ashraf</a>
+            <a class="card-title" href="#">Haris Sohail</a>
+            <a class="card-title" href="#">Hasan Ali</a>
+            <a class="card-title" href="#">Shadab Khan</a>
+            <a class="card-title" href="#">Mohammad Abbas</a>
+            <a class="card-title" href="#">Babar Azam</a>
+            <a class="card-title" href="#">Muhammad Amir</a>
+            <a class="card-title" href="#">Yasir Shah</a>
+            <a class="card-title" href="#">Usman Salahuddin</a>
+
+          </ol>
+  			  </div>
+  			</div>
+
+		  </div>
+		  <div class="col-sm-4" float-right>
+			<div class="card">
+			  <div class="card-body">
+				<h5 class="card-title">Top Headlines <large class="float-right"></h5>
+
+				  <ul class="list-group list-group-flush">
+					<a href="#" class="card-link">Sabbir Rahman axed from Bangladesh's Asia Cup Squad</a><br>
+					<a href="#" class="card-link">Murtagh, Balbirnie help Ireland draw level</a><br>
+					<a href="#" class="card-link">Kirsten replaces Vettori as RCB coach</a><br>
+					<a href="#" class="card-link">Nasir Jamshed banned for 10 years by PCB</a><br>
+				  </ul>
+
+			  </div>
+			</div>
+
+		  </div>
+		</div>
+	</div>
 
 
     <!-- Optional JavaScript -->
